--- a/static/indexFirst.html
+++ b/static/indexFirst.html
@@ -174,7 +174,7 @@
     <!--[if gt IE 8]><!-->
     <link rel="stylesheet" href="./משחק המונדיאל 2018 - הארץ_files/screen.css">
 
-    <link rel="stylesheet" type="text/css" href="./משחק המונדיאל 2018 - הארץ_files/styles.css">
+    <link rel="stylesheet" type="text/css" href="./משחק המונדיאל 2018 - הארץ_files/stylesFirst.css">
 
     <!--<![endif]-->
 
@@ -2732,7 +2732,7 @@
                         <!--  <a class="mondial-ad" href="http://pubads.g.doubleclick.net/gampad/clk?id=4687999356&amp;iu=/9401/Haaretz.co.il.ClickTracker" target="_blank">
                 <img data-mobileimg="https://www.haaretz.co.il/st/c/static/resources/img/banners/mondial2018/banner-mobile.jpg" src="./משחק המונדיאל 2018 - הארץ_files/banner-desktop1.jpg">
             </a> -->
-                        <div class="inter-brackets-sixteen stage-locked">
+                      <!--   <div class="inter-brackets-sixteen stage-locked">
                             <h2>שמינית הגמר</h2>
                             <div class="inter-brackets-match" data-finished="false" data-match="1">
                                 <h3>משחק 1</h3>
@@ -3083,11 +3083,11 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!--  <a class="mondial-ad" href="http://pubads.g.doubleclick.net/gampad/clk?id=4687999356&amp;iu=/9401/Haaretz.co.il.ClickTracker" target="_blank">
                 <img data-mobileimg="https://www.haaretz.co.il/st/c/static/resources/img/banners/mondial2018/banner-mobile.jpg" src="./משחק המונדיאל 2018 - הארץ_files/banner-desktop1.jpg">
             </a> -->
-                        <div class="inter-brackets-semi stage-locked">
+                      <!--   <div class="inter-brackets-semi stage-locked">
                             <div class="inter-brackets-semi-wrapper">
                                 <h2>חצי הגמר</h2>
                                 <div class="inter-brackets-match" data-finished="false" data-match="1">
@@ -3197,7 +3197,7 @@
                                 <h3 class="winner-name">?</h3>
                                 <button class="share-predict inter-f">שתפו את התחזית</button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="inter-tab inter-brackets-0 hide">
                         <div class="inter-brackets-houses">
@@ -4017,7 +4017,7 @@
                         <!--  <a class="mondial-ad" href="http://pubads.g.doubleclick.net/gampad/clk?id=4687999356&amp;iu=/9401/Haaretz.co.il.ClickTracker" target="_blank">
                 <img data-mobileimg="https://www.haaretz.co.il/st/c/static/resources/img/banners/mondial2018/banner-mobile.jpg" src="./משחק המונדיאל 2018 - הארץ_files/banner-desktop1.jpg">
             </a> -->
-                        <div class="inter-brackets-semi">
+                    <!--     <div class="inter-brackets-semi">
                             <div class="inter-brackets-semi-wrapper">
                                 <h2>חצי הגמר</h2>
                                 <div class="inter-brackets-match" data-finished="false" data-match="1">
@@ -4133,7 +4133,7 @@
                                 <h3 class="winner-name">?</h3>
                                 <button id="fastToTop" class="share-predict">מלאו את התחזית שלכם</button>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -4341,7 +4341,7 @@
     <script src="./משחק המונדיאל 2018 - הארץ_files/lz-string.js"></script>
     <script src="./משחק המונדיאל 2018 - הארץ_files/scroll.js"></script>
     <script src="./משחק המונדיאל 2018 - הארץ_files/data.js"></script>
-    <script src="./משחק המונדיאל 2018 - הארץ_files/app.js"></script>
+    <script src="./משחק המונדיאל 2018 - הארץ_files/appFirst.js"></script>
 
     <script>
         var $menu = $(".mh__nav");
