--- a/static/indexFirst.html
+++ b/static/indexFirst.html
@@ -487,10 +487,10 @@
                     <img class="player1" src="./משחק המונדיאל 2018 - הארץ_files/messi_new.svg">
                     <img class="player2" src="./משחק המונדיאל 2018 - הארץ_files/ronaldo.svg">
                     <div class="inter-tournament-open-info">
-                        <img style="width: 8%;
+                     <!--    <img style="width: 8%;
             top: -5%;
             height: 30%;
-            left: 45%;" src="./logo.png">
+            left: 45%;" src="./logo.png"> -->
                         <h1 style="font-size: 40px;font-weight:800 "> המונדיאל</h1>
 
                         <p>חושבים שאתם יודעים מי תניף את גביע העולם? מלאו תחזית ושתפו אותה עם HKUBE</p>
@@ -501,7 +501,7 @@
                             <p style=" margin-bottom: 4px; 
                             font-weight:300;    font-size: 18px; width: 83%;  display: inline-block;   text-align: right;">הוראות:</p>
                             <p style=" margin-bottom: 4px; 
-                            font-weight:300;    font-size: 18px; width: 83%;  display: inline-block;   text-align: right;">1. רשמו שם משתמש ומשפחה ולחצו על שמור ליד השם</p>
+                            font-weight:300;    font-size: 18px; width: 83%;  display: inline-block;   text-align: right;">1. רשמו שם משתמש ולחצו על שמור ליד השם</p>
                             <p style=" margin-bottom: 4px; 
                             font-weight:300;     font-size: 18px;width: 83%;  display: inline-block;   text-align: right;">2. מלאו את הניחוש שלכם</p>
                             <p style=" margin-bottom: 4px; 
@@ -521,14 +521,14 @@
                         <div class="inter-message show">
                             <span class="userName">שלום </span>
                             <input placeholder="משתמש חדש" type="text" id="inputUserName" autofocus="" tabindex="1">
-                            <span id="inputUserNameButton">| שמור </span>
+                            <span id="inputUserNameButton">שמור </span>
                             <span class="extraMessageForUser">, שנצא לדרך?</span>
                         </div>
                         <div class="inter-logo hideme">
                             <!--  <img src="./משחק המונדיאל 2018 - הארץ_files/haaretz_russia_logo2.svg">  -->
 
                             <span style="    vertical-align: 20px;">HKUBE</span>
-                            <img src="./logo.png">
+                           <!--  <img src="./logo.png"> -->
                         </div>
                         <div class="inter-tournament-controls showme">
                             <button class="control-btn hide" id="inter-brackets">מלאו את התחזית שלכם</button>
