add first round remove viewport

--- a/static/indexFirst.html
+++ b/static/indexFirst.html
@@ -121,7 +121,7 @@
 
 
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+ <!--    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"> -->
 
     <meta property="og:title" content="משלב הבתים עד לגביע: מלאו ושתפו את משחק המונדיאל 2018">
     <meta property="og:description" content="חושבים שאתם יודעים איזו נבחרת גדולה תתרסק כבר בשלב הבתים, מי תהיה הפתעת הטורניר ומי תניף את גביע העולם ברוסיה? מלאו את משחק המונדיאל האינטראקטיבי של &quot;ספורט הארץ&quot; ושתפו עם החברים את התחזית שלכם">
@@ -174,7 +174,7 @@
     <!--[if gt IE 8]><!-->
     <link rel="stylesheet" href="./משחק המונדיאל 2018 - הארץ_files/screen.css">
 
-    <link rel="stylesheet" type="text/css" href="./משחק המונדיאל 2018 - הארץ_files/stylesFirst.css">
+    <link rel="stylesheet" type="text/css" href="./משחק המונדיאל 2018 - הארץ_files/styles.css">
 
     <!--<![endif]-->
 
@@ -528,7 +528,7 @@
                             <!--  <img src="./משחק המונדיאל 2018 - הארץ_files/haaretz_russia_logo2.svg">  -->
 
                             <span style="    vertical-align: 20px;">HKUBE</span>
-                           <!--  <img src="./logo.png"> -->
+                            <img src="./logo.png">
                         </div>
                         <div class="inter-tournament-controls showme">
                             <button class="control-btn hide" id="inter-brackets">מלאו את התחזית שלכם</button>
