fix colombia to  russia

--- a/static/indexFirst.html
+++ b/static/indexFirst.html
@@ -2046,7 +2046,7 @@
                                         <div class="country-flag">
                                             <img src="./משחק המונדיאל 2018 - הארץ_files/russia.png">
                                         </div>
-                                        <div class="country-name">קולומביה</div>
+                                        <div class="country-name">רוסיה</div>
                                         <div class="input-wrapper">
                                             <span class="input-wrapper-content">בחר</span>
                                         </div>
