--- a/static/index.html
+++ b/static/index.html
@@ -2588,7 +2588,8 @@ src="https://www.facebook.com/tr?id=801998859871552&amp;ev=PageView&amp;noscript
                 </div>
                 <div class="inter-tournament-wrapper showme">
                     <div class="inter-tab inter-brackets">
-                        <div class="inter-brackets-houses">
+                        <div style="    position: absolute; visibility: hidden; height: 0px;
+                    " class="inter-brackets-houses">
                             <h2>שלב הבתים</h2>
                             <div class="inter-brackets-house" data-housenum="0" data-outcomes="win,lost" data-finished="false">
 
